--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18",
     "react-floating-whatsapp": "^5.0.8",
+    "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-typed": "^2.0.12",
     "sass": "^1.72.0"
